--- a/app/views/players/map_time.html.erb
+++ b/app/views/players/map_time.html.erb
@@ -24,5 +24,19 @@
     <button id="eliminar" >Eliminar</button>
   </div>
   <br>
-  <button id="reiniciar">Reiniciar mapa</button>
+</div>
+
+<div style="position:absolute; left:60%; top:55%;">
+  <h3>Filter time</h3>
+  <a>Desde: <input id="dateFrom" type="date"></input></a>
+  <a>Hasta: <input id="dateUntil" type="date"></input></a>
+  <button id="filterDate" >Filter</button>
+
+  <br>
+  <br>
+
+  <button id="date_today">Today</button>
+  <button id="date_thisWeek">This week</button>
+  <button id="date_anyTime">Any time</button>
+
 </div>
